--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <body class="is-preload" style="background: #000">
     <div id="wrapper">
       <div style="z-index: -99;">
-        <img src="assets/images/backgrounds/street-1.gif" class="animated-background">
+        <img src="assets/images/backgrounds/neon-rain.gif" class="animated-background">
       </div>
       <div id="main">
         <header id="header">
@@ -33,12 +33,12 @@
           <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><i class="fas fa-code"></i> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://soundcloud.com/rauldipeas" target="_blank" title="BandLab"><i class="fa fa-music"></i> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><i class="fa fa-film"></i> Cinéfilo</a></p>
           <nav>
             <ul>
-              <li><a href="https://gitlab.com/cursos-rauldipeas/cursos/-/wikis/home" target="_blank" title="Cursos"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/easy-ebook-viewer.svg" class="links-svg"></a></li>
+              <li><a href="https://git.disroot.org/rauldipeas" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/gitqlient.svg" class="links-svg"></a></li>
+              <li><a href="https://git.disroot.org/rauldipeas/kubuntu-custom" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/48x48/apps/distributor-logo-kubuntu.svg" class="links-svg"></a></li>
               <li><a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tumblr.svg" class="links-svg"></a></li>
               <li><a href="https://mastodon.social/@raul_dipeas" rel="me" target="_blank" title="Mastodon"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" rel="me" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="assets/images/session-qrcode-id.png" target="_blank" title="Session"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/session-desktop.svg" class="links-svg"></a></li>
-              <li><a href="https://keybase.pub/raul_dipeas" target="_blank" title="Keybase"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/keybase.svg" class="links-svg"></a></li>
             </ul>
           </nav>
         </header>
