--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <body class="is-preload" style="background: #000">
     <div id="wrapper">
       <div style="z-index: -99;">
-        <img src="assets/images/backgrounds/neon-rain.gif" class="animated-background">
+        <img src="assets/images/backgrounds/street-1.gif" class="animated-background">
       </div>
       <div id="main">
         <header id="header">
@@ -34,7 +34,7 @@
           <nav>
             <ul>
               <li><a href="https://git.disroot.org/rauldipeas" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/gitqlient.svg" class="links-svg"></a></li>
-              <li><a href="https://git.disroot.org/rauldipeas/kubuntu-custom" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/48x48/apps/distributor-logo-kubuntu.svg" class="links-svg"></a></li>
+              <li><a href="https://git.disroot.org/rauldipeas/kubuntu-custom/src/branch/main/readme.md" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/48x48/apps/distributor-logo-kubuntu.svg" class="links-svg"></a></li>
               <li><a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tumblr.svg" class="links-svg"></a></li>
               <li><a href="https://mastodon.social/@raul_dipeas" rel="me" target="_blank" title="Mastodon"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" rel="me" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
