--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
           <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><i class="fas fa-code"></i> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://soundcloud.com/rauldipeas" target="_blank" title="SoundCloud"><i class="fa fa-music"></i> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><i class="fa fa-film"></i> Cinéfilo</a></p>
           <nav>
             <ul>
-              <li><a href="https://git.disroot.org/rauldipeas" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/gitqlient.svg" class="links-svg"></a></li>
+              <li><a href="https://git.disroot.org/rauldipeas" target="_blank" title="Git"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/gitqlient.svg" class="links-svg"></a></li>
               <li><a href="https://quire.io/w/kubuntu-custom" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/48x48/apps/distributor-logo-kubuntu.svg" class="links-svg"></a></li>
               <li><a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tumblr.svg" class="links-svg"></a></li>
               <li><a href="https://mastodon.social/@raul_dipeas" rel="me" target="_blank" title="Mastodon"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg"></a></li>
