--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,9 @@
             })
           }
         })(document,"script");
+        window.chatwootSettings = {
+          darkMode: "auto",
+        };
       </script>    
       <script>
         var myIndex = 0;
