--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
           darkMode: "auto",
         };
       </script>  
-      <script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BChGSoE5-F8m1QPsMB_5CsuMlq8fpPoSBPLrZeR-2hmY7UHwGy-qsDLoURvALCrk8T1L31wAG_dyJVxYNNLQGrM' });</script>
+      <!--<script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BChGSoE5-F8m1QPsMB_5CsuMlq8fpPoSBPLrZeR-2hmY7UHwGy-qsDLoURvALCrk8T1L31wAG_dyJVxYNNLQGrM' });</script>-->
       <script>
         var myIndex = 0;
         carousel();
