^session-qr-code ^js

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     </noscript>
     <script src="https://kit.fontawesome.com/04e720fc26.js" crossorigin="anonymous"></script>
     <link rel="icon" href="assets/images/avatar/avatar 1.svg" type="image/png">
-    <meta name="ocs-site-verification" content="24dd53a8ed6575e583c47505f06e4499" />
+    <meta name="ocs-site-verification" content="24dd53a8ed6575e583c47505f06e4499"/>
   </head>
   <body class="is-preload" style="background: #000">
     <div id="wrapper">
@@ -45,74 +45,18 @@
       </div>
       <!--<div class="youtube">
         <iframe width="280" height="157,5"
-          src="https://www.youtube.com/embed/live_stream?channel=UCDujDO27n_ItUi_mPDXEZpQ&autoplay=1" frameborder="0"
-          allowfullscreen>
-        </iframe>
-      </div>-->
-      <!--<div>
-        <a href="https://youtube.com/rauldipeas" target="_blank">
-          <img src="assets/images/youtube.gif" class="stream-badge">
-        </a>
-      </div>-->
-      <!--<script type="text/javascript">
-        window.$crisp=[];
-        window.CRISP_WEBSITE_ID="896e35ed-eba0-4be0-a0f8-da0b0b95a8d5";
-        (
-          function(){
-            d=document;
-            s=d.createElement("script");
-            s.src="https://client.crisp.chat/l.js";
-            s.async=1;
-            d.getElementsByTagName("head")[0].appendChild(s);
-          }
-        )();
-      </script>-->
-      <script>
-        (function(d,t) {
-          var BASE_URL="https://app.chatwoot.com";
-          var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src=BASE_URL+"/packs/js/sdk.js";
-          g.defer = true;
-          g.async = true;
-          s.parentNode.insertBefore(g,s);
-          g.onload=function(){
-            window.chatwootSDK.run({
-              websiteToken: 'q1YZnbvptxNoyHSXrzHo58X4',
-              baseUrl: BASE_URL
-            })
-          }
-        })(document,"script");
-        window.chatwootSettings = {
-          darkMode: "auto",
-        };
-      </script>  
-      <!--<script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BChGSoE5-F8m1QPsMB_5CsuMlq8fpPoSBPLrZeR-2hmY7UHwGy-qsDLoURvALCrk8T1L31wAG_dyJVxYNNLQGrM' });</script>-->
-      <script>
-        var myIndex = 0;
-        carousel();
-        function carousel() {
-          var i;
-          var x = document.getElementsByClassName("mySlides");
-          for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";  
-          }
-          myIndex++;
-          if (myIndex > x.length) {myIndex = 1}    
-          x[myIndex-1].style.display = "block";  
-          setTimeout(carousel, 1000);
-        }
-      </script>
-      <script>
-        window.onload = function () {
-          document.body.classList.remove('is-preload');
-        }
-        window.ontouchmove = function () {
-          return false;
-        }
-        window.onorientationchange = function () {
-          document.body.scrollTop = 0;
-        }
-      </script>
-    </div>
-  </body>
+        src="https://www.youtube.com/embed/live_stream?channel=UCDujDO27n_ItUi_mPDXEZpQ&autoplay=1" frameborder="0"
+        allowfullscreen>
+      </iframe>
+    </div>-->
+    <!--<div>
+      <a href="https://youtube.com/rauldipeas" target="_blank">
+        <img src="assets/images/youtube.gif" class="stream-badge">
+      </a>
+    </div>-->
+  </div>
+  <script src="assets/js/carousel.js"></script>
+  <script src="assets/js/chatwoot.js"></script>
+  <script src="assets/js/load.js"></script>
+</body>
 </html>
