--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
               <li><a href="https://mastodon.social/@raul_dipeas" rel="me" target="_blank" title="Mastodon"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" rel="me" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="assets/images/session-qrcode-id.png" target="_blank" title="Session"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/session-desktop.svg" class="links-svg"></a></li>
+              <!--<li><a href="https://around.co/rauldipeas" target="_blank" title="Around"><img src="https://avatars.githubusercontent.com/u/62425723?s=200&v=4" class="links-svg"></a></li>-->
             </ul>
           </nav>
         </header>
