--- a/public/index.html
+++ b/public/index.html
@@ -59,5 +59,6 @@
   <script src="assets/js/carousel.js"></script>
   <script src="assets/js/chatwoot.js"></script>
   <script src="assets/js/load.js"></script>
+  <script src="assets/js/matomo.js"></script>
 </body>
 </html>
