--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,22 @@
     <link rel="icon" href="assets/images/avatar/avatar 1.svg" type="image/png">
     <meta name="ocs-site-verification" content="24dd53a8ed6575e583c47505f06e4499"/>
     <script src="assets/js/matomo.js"></script>
+    <!-- Matomo -->
+    <script>
+      var _paq = window._paq = window._paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="//rauldipeas.rf.gd/analytics/";
+        _paq.push(['setTrackerUrl', u+'matomo.php']);
+        _paq.push(['setSiteId', '2']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <!-- End Matomo Code -->
+
   </head>
   <body class="is-preload" style="background: #000">
     <div id="wrapper">
