--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,11 @@
               <li><a href="https://github.com/rauldipeas" target="_blank" title="Git"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/github.svg" class="links-svg"></a></li>
               <li><a href="https://hackmd.io/@rauldipeas/kubuntu-custom" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/48x48/apps/distributor-logo-kubuntu.svg" class="links-svg"></a></li>
               <li><a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tumblr.svg" class="links-svg"></a></li>
-              <li><a href="https://mastodon.social/@raul_dipeas" rel="me" target="_blank" title="Mastodon"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg"></a></li>
-              <li><a href="https://instagram.com/raul.dipeas" rel="me" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
+              <!--<li><a href="https://mastodon.social/@raul_dipeas" rel="me" target="_blank" title="Mastodon"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg"></a></li>-->
+              <li><a href="https://gab.com/rauldipeas" target="_blank" title="Gab"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/com.endlessnetwork.frogsquash.svg" class="links-svg"></a></li>
+              <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="assets/images/session-qrcode-id.png" target="_blank" title="Session"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/session-desktop.svg" class="links-svg"></a></li>
-              <!--<li><a href="https://around.co/rauldipeas" target="_blank" title="Around"><img src="https://avatars.githubusercontent.com/u/62425723?s=200&v=4" class="links-svg"></a></li>-->
+              <li><a href="https://around.co/rauldipeas" target="_blank" title="Around"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/io.github.lainsce.Colorway.svg" class="links-svg"></a></li>
             </ul>
           </nav>
         </header>
