--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
     <script src="https://kit.fontawesome.com/04e720fc26.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/images/avatar/avatar 1.svg" type="image/png">
+    <link rel="icon" href="assets/images/avatar/avatar 1.svg" type="image/svg">
     <meta name="ocs-site-verification" content="24dd53a8ed6575e583c47505f06e4499"/>
     <script src="assets/js/counter.js"></script>
   </head>
@@ -40,7 +40,7 @@
               <!--<li><a href="https://mastodon.social/@raul_dipeas" rel="me" target="_blank" title="Mastodon"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg"></a></li>-->
               <li><a href="https://gab.com/rauldipeas" target="_blank" title="Gab"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/com.endlessnetwork.frogsquash.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
-              <li><a href="assets/images/session-qrcode-id.png" target="_blank" title="Session"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/session-desktop.svg" class="links-svg"></a></li>
+              <li><a href="assets/images/session-qrcode-id.webp" target="_blank" title="Session"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/session-desktop.svg" class="links-svg"></a></li>
               <li><a href="https://around.co/rauldipeas" target="_blank" title="Around"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/io.github.lainsce.Colorway.svg" class="links-svg"></a></li>
             </ul>
           </nav>
