--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
               <li><a href="https://gab.com/rauldipeas" target="_blank" title="Gab"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/com.endlessnetwork.frogsquash.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="assets/images/session-qrcode-id.webp" target="_blank" title="Session"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/session-desktop.svg" class="links-svg"></a></li>
-              <li><a href="https://around.co/rauldipeas" target="_blank" title="Around"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/io.github.lainsce.Colorway.svg" class="links-svg"></a></li>
+              <li><a href="https://around.co/rauldipeas" target="_blank" title="Around"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/around.svg" class="links-svg"></a></li>
             </ul>
           </nav>
         </header>
