--- a/public/index.html
+++ b/public/index.html
@@ -21,16 +21,12 @@
       <div id="main">
         <header id="header">
           <div>
-            <a href="https://facebook.com/rauldipeas" target="_blank" title="Facebook">
-              <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 1.svg">
-              <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 2.svg">
-              <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 3.svg">
-              <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 4.svg">
-            </a>
+            <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 1.svg">
+            <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 2.svg">
+            <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 3.svg">
+            <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 4.svg">
           </div>
-          <a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter">
-            <h1>Raul Dipeas</h1>
-          </a>
+          <h1>Raul Dipeas</h1>
           <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><i class="fas fa-code"></i> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://soundcloud.com/rauldipeas" target="_blank" title="SoundCloud"><i class="fa fa-music"></i> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><i class="fa fa-film"></i> Cinéfilo</a></p>
           <nav>
             <ul>
@@ -38,7 +34,8 @@
               <li><a href="https://hackmd.io/@rauldipeas/kubuntu-custom" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/48x48/apps/distributor-logo-kubuntu.svg" class="links-svg"></a></li>
               <li><a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tumblr.svg" class="links-svg"></a></li>
               <!--<li><a href="https://mastodon.social/@raul_dipeas" rel="me" target="_blank" title="Mastodon"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg"></a></li>-->
-              <li><a href="https://gab.com/rauldipeas" target="_blank" title="Gab"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/com.endlessnetwork.frogsquash.svg" class="links-svg"></a></li>
+              <!--<li><a href="https://gab.com/rauldipeas" target="_blank" title="Gab"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/com.endlessnetwork.frogsquash.svg" class="links-svg"></a></li>-->
+              <li><a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/twitter.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="assets/images/session-qrcode-id.webp" target="_blank" title="Session"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/session-desktop.svg" class="links-svg"></a></li>
               <li><a href="https://around.co/rauldipeas" target="_blank" title="Around"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/around.svg" class="links-svg"></a></li>
