--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     </noscript>
     <script src="https://kit.fontawesome.com/04e720fc26.js" crossorigin="anonymous"></script>
     <link rel="icon" href="assets/images/avatar/avatar 1.svg" type="image/svg">
-    <meta name="ocs-site-verification" content="24dd53a8ed6575e583c47505f06e4499"/>
+    <!--<meta name="ocs-site-verification" content="24dd53a8ed6575e583c47505f06e4499"/>-->
+    <meta name="ocs-site-verification" content="5a9b57c5c9bf829fb1c48fedab515c74"/>
     <script src="assets/js/counter.js"></script>
   </head>
   <body class="is-preload" style="background: #000">
