--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,6 @@
               <!--<li><a href="https://hackmd.io/@rauldipeas/kubuntu-custom" target="_blank" title="Kubuntu Custom"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/48x48/apps/distributor-logo-kubuntu.svg" class="links-svg"></a></li>-->
               <li><a href="https://hackmd.io/@rauldipeas/produção-musical-no-linux" target="_blank" title="Produção musical no Linux"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tuxguitar.svg" class="links-svg"></a></li>
               <li><a href="https://hackmd.io/@rauldipeas" target="_blank" title="HackMD"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/mimetypes/text-x-script.svg" class="links-svg"></a></li>
-              <!--<li><a href="https://garudalinux.org" target="_blank" title="Garuda Linux"><img src="assets/images/garudalinux.png" class="links-svg"></a></li>-->
               <li><a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tumblr.svg" class="links-svg"></a></li>
               <!--<li><a href="https://mastodon.social/@raul_dipeas" rel="me" target="_blank" title="Mastodon"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg"></a></li>-->
               <!--<li><a href="https://gab.com/rauldipeas" target="_blank" title="Gab"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/com.endlessnetwork.frogsquash.svg" class="links-svg"></a></li>-->
@@ -43,7 +42,8 @@
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <!--<li><a href="assets/images/session-qrcode-id.webp" target="_blank" title="Session"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/session-desktop.svg" class="links-svg"></a></li>-->
               <li><a href="https://matrix.to/#/@raul_dipeas:matrix.org" target="_blank" title="Matrix"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/gtkhash.svg" class="links-svg"></a></li>
-              <li><a href="https://around.co/rauldipeas" target="_blank" title="Around"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/around.svg" class="links-svg"></a></li>
+              <!--<li><a href="https://around.co/rauldipeas" target="_blank" title="Around"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/around.svg" class="links-svg"></a></li>-->
+              <li><a href="https://meet.jit.si/rauldipeas" target="_blank" title="Jitsi"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/jitsi.svg" class="links-svg"></a></li>
             </ul>
           </nav>
         </header>
