--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/venom-button.min.css">
     <noscript>
       <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
@@ -59,9 +60,13 @@
         <img src="assets/images/youtube.gif" class="stream-badge">
       </a>
     </div>-->
+    <div id="venom-button"></div>
   </div>
   <script src="assets/js/carousel.js"></script>
-  <script src="assets/js/chatwoot.js"></script>
+  <script src="assets/js/venom-buttom.js"></script>
+  <script src="assets/js/venom-button.min.js"></script>
+  <!--<script src="assets/js/chatwoot.js"></script>-->
   <script src="assets/js/load.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </body>
 </html>
