--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <div id="venom-button"></div>
   </div>
   <script src="assets/js/carousel.js"></script>
-  <script src="assets/js/venom-buttom.js"></script>
+  <script src="assets/js/venom-button.js"></script>
   <script src="assets/js/venom-button.min.js"></script>
   <!--<script src="assets/js/chatwoot.js"></script>-->
   <script src="assets/js/load.js"></script>
