--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,10 @@
             <ul>
               <li><a href="https://github.com/rauldipeas" target="_blank" title="Git"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/github.svg" class="links-svg"></a></li>
               <li><a href="https://hackmd.io/@rauldipeas/produção-musical-no-linux" target="_blank" title="Produção musical no Linux"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tuxguitar.svg" class="links-svg"></a></li>
-              <li><a href="https://hackmd.io/@rauldipeas" target="_blank" title="HackMD"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/mimetypes/text-x-script.svg" class="links-svg"></a></li>
               <li><a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tumblr.svg" class="links-svg"></a></li>
               <li><a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/twitter.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
-              <li><a href="https://matrix.to/#/@raul_dipeas:matrix.org" target="_blank" title="Matrix"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/gtkhash.svg" class="links-svg"></a></li>
+              <li><a href="https://t.me/rauldipeas" target="_blank" title="Telegram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/telegram.svg" class="links-svg"></a></li>
               <li><a href="https://meet.jit.si/rauldipeas" target="_blank" title="Jitsi"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/jitsi.svg" class="links-svg"></a></li>
             </ul>
           </nav>
