--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         <img src="assets/images/youtube.gif" class="stream-badge">
       </a>
     </div>-->
-    <div id="venom-button"></div>
+    <div id="venom-button" class="links-svg"></div>
   </div>
   <script src="assets/js/carousel.js"></script>
   <script src="assets/js/venom-button.js"></script>
