--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,11 @@
       <div style="z-index: -99;">
         <img src="assets/images/backgrounds/street-1.gif" class="animated-background">
       </div>
+        <div class="topnav">
+          <a href="https://github.com/rauldipeas" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/github.svg" class="topnav-icon"> GitHub</a>
+          <a href="https://hackmd.io/@rauldipeas/guias" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/mimetypes/text-x-script.svg" class="topnav-icon"> Guias</a>
+          <a href="https://rauldipeas.tumblr.com" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/tumblr.svg" class="topnav-icon"> Blog</a>
+        </div>
       <div id="main">
         <header id="header">
           <div>
@@ -33,10 +38,7 @@
           <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><i class="fas fa-code"></i> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://soundcloud.com/rauldipeas" target="_blank" title="SoundCloud"><i class="fa fa-music"></i> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><i class="fa fa-film"></i> Cinéfilo</a></p>
           <nav>
             <ul>
-              <li><a href="https://github.com/rauldipeas" target="_blank" title="GitHub"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/github.svg" class="links-svg"></a></li>
-              <li><a href="https://github.com/rauldipeas/respin-rdx" target="_blank" title="Respin RDX"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/ubuntu-tweak.svg" class="links-svg"></a></li>
-              <li><a href="https://hackmd.io/@rauldipeas/produção-musical-no-linux" target="_blank" title="Produção musical no Linux"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tuxguitar.svg" class="links-svg"></a></li>
-              <li><a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tumblr.svg" class="links-svg"></a></li>
+              <li><a href="https://rauldipeas.github.io/respin-rdx" target="_blank" title="Respin RDX"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/ubuntu-tweak.svg" class="links-svg"></a></li>
               <li><a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/twitter.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="https://youtube.com/rauldipeas" target="_blank" title="YouTube"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/youtube.svg" class="links-svg"></a></li>
