--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
               <li><a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/twitter.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="https://youtube.com/rauldipeas" target="_blank" title="YouTube"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/youtube.svg" class="links-svg"></a></li>
+              <li><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/visual-studio-code.svg" class="links-svg"></a></li>
+              <li><a href="https://soundcoud.com/rauldipeas" target="_blank" title="SoundCloud"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/soundcloud.svg" class="links-svg"></a></li>
+              <li><a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/exmplayer.svg" class="links-svg"></a></li>
             </ul>
           </nav>
         </header>
