--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
         <img src="assets/images/backgrounds/street-1.gif" class="animated-background">
       </div>
         <div class="topnav">
-          <a href="https://github.com/rauldipeas" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/github.svg" class="topnav-icon"> GitHub</a>
-          <a href="https://hackmd.io/@rauldipeas/guias" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/mimetypes/text-x-script.svg" class="topnav-icon"> Guias</a>
-          <a href="https://rauldipeas.tumblr.com" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/tumblr.svg" class="topnav-icon"> Blog</a>
+          <a href="https://github.com/rauldipeas" target="_blank"><i class="fab fa-github"></i>&nbsp&nbspGitHub</a>
+          <a href="https://hackmd.io/@rauldipeas/guias" target="_blank"><i class="fas fa-graduation-cap"></i>&nbsp&nbspGuias</a>
+          <a href="https://rauldipeas.tumblr.com" target="_blank"><i class="fab fa-tumblr"></i>&nbsp&nbspBlog</a>
         </div>
       <div id="main">
         <header id="header">
@@ -35,13 +35,10 @@
             <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 4.svg">
           </div>
           <h1>Raul Dipeas</h1>
-          <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><i class="fas fa-code"></i> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://soundcloud.com/rauldipeas" target="_blank" title="SoundCloud"><i class="fa fa-music"></i> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><i class="fa fa-film"></i> Cinéfilo</a></p>
+          <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/visual-studio-code.svg"> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://soundcloud.com/rauldipeas" target="_blank" title="SoundCloud"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/soundcloud.svg"> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/exmplayer.svg"> Cinéfilo</a></p>
           <nav>
             <ul>
               <li><a href="https://rauldipeas.github.io/respin-rdx" target="_blank" title="Respin RDX"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/ubuntu-tweak.svg" class="links-svg"></a></li>
-              <li><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/visual-studio-code.svg" class="links-svg"></a></li>
-              <li><a href="https://soundcloud.com/rauldipeas" target="_blank" title="SoundCloud"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/soundcloud.svg" class="links-svg"></a></li>
-              <li><a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/exmplayer.svg" class="links-svg"></a></li>
               <li><a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/twitter.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="https://youtube.com/rauldipeas" target="_blank" title="YouTube"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/youtube.svg" class="links-svg"></a></li>
