--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,12 @@
         <img src="assets/images/backgrounds/street-1.gif" class="animated-background">
       </div>
         <div class="topnav">
-          <a href="https://github.com/rauldipeas" target="_blank"><i class="fab fa-github"></i>&nbsp&nbspGitHub</a>
-          <a href="https://hackmd.io/@rauldipeas/guias" target="_blank"><i class="fas fa-graduation-cap"></i>&nbsp&nbspGuias</a>
-          <a href="https://rauldipeas.tumblr.com" target="_blank"><i class="fab fa-tumblr"></i>&nbsp&nbspBlog</a>
+          <a href="https://github.com/rauldipeas" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+          <a href="https://hackmd.io/@rauldipeas/guias" target="_blank" title="Guias (HackMD)"><i class="fas fa-graduation-cap"></i></a>
+          <a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><i class="fab fa-tumblr"></i></a>
+          <a href="https://mastodon.social/@raul_dipeas" target="_blank" title="Mastodon"><i class="fab fa-mastodon"></i></a>
+          <a href="viber://chat?number=5511954421574" target="_blank" title="Viber"><i class="fab fa-viber"></i></a>
+          <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
         </div>
       <div id="main">
         <header id="header">
@@ -39,7 +42,6 @@
           <nav>
             <ul>
               <li><a href="https://rauldipeas.github.io/respin-rdx" target="_blank" title="Respin RDX"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/ubuntu-tweak.svg" class="links-svg"></a></li>
-              <li><a href="https://mastodon.social/@raul_dipeas" target="_blank" title="Mastodon"><img src="https://www.svgrepo.com/show/354046/mastodon-icon.svg" class="links-svg" style="padding: 4px;"></a></li>
               <li><a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/twitter.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="https://youtube.com/rauldipeas" target="_blank" title="YouTube"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/youtube.svg" class="links-svg"></a></li>
