--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     </noscript>
     <script src="https://kit.fontawesome.com/04e720fc26.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/images/avatar/avatar%201.svg" type="image/svg">
+    <link rel="icon" href="assets/images/avatar/avatar 1.svg" type="image/svg">
     <!--<meta name="ocs-site-verification" content="24dd53a8ed6575e583c47505f06e4499"/>-->
     <meta name="ocs-site-verification" content="5a9b57c5c9bf829fb1c48fedab515c74"/>
     <script src="assets/js/counter.js"></script>
