--- a/public/index.html
+++ b/public/index.html
@@ -60,11 +60,13 @@
         <img src="assets/images/youtube.gif" class="stream-badge">
       </a>
     </div>-->
-    <div id="venom-button"></div>
+    <!--<div id="venom-button"></div>-->
+    <div class="elfsight-app-cb6d2c61-38c1-41fc-821f-757ffea6c2fa"></div>
   </div>
   <script src="assets/js/carousel.js"></script>
   <script src="assets/js/venom-button.js"></script>
   <script src="assets/js/venom-button.min.js"></script>
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
   <!--<script src="assets/js/chatwoot.js"></script>-->
   <script src="assets/js/load.js"></script>
 </body>
