--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
           <a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><i class="fab fa-tumblr"></i></a>
           <a href="https://mastodon.social/@raul_dipeas" target="_blank" title="Mastodon"><i class="fab fa-mastodon"></i></a>
           <a href="viber://chat?number=5511954421574" target="_blank" title="Viber"><i class="fab fa-viber"></i></a>
+          <a href="https://t.me/rauldipeas" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>
           <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
         </div>
       <div id="main">
@@ -60,13 +61,11 @@
         <img src="assets/images/youtube.gif" class="stream-badge">
       </a>
     </div>-->
-    <!--<div id="venom-button"></div>-->
-    <div class="elfsight-app-cb6d2c61-38c1-41fc-821f-757ffea6c2fa"></div>
+    <div id="venom-button"></div>
   </div>
   <script src="assets/js/carousel.js"></script>
   <script src="assets/js/venom-button.js"></script>
   <script src="assets/js/venom-button.min.js"></script>
-  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
   <!--<script src="assets/js/chatwoot.js"></script>-->
   <script src="assets/js/load.js"></script>
 </body>
