--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
           <a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><i class="fab fa-tumblr"></i></a>
           <a href="https://mastodon.social/@raul_dipeas" target="_blank" title="Mastodon"><i class="fab fa-mastodon"></i></a>
           <a href="viber://chat?number=5511954421574" target="_blank" title="Viber"><i class="fab fa-viber"></i></a>
-          <a href="https://t.me/rauldipeas" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>
+          <a href="https://t.me/rauldipeas" target="_blank" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
           <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
         </div>
       <div id="main">
