--- a/site/index.html
+++ b/site/index.html
@@ -42,7 +42,7 @@
           <nav>
             <ul>
               <li><a href="https://rauldipeas.github.io/respin-rdx" target="_blank" title="Respin RDX"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/ubuntu-tweak.svg" class="links-svg"></a></li>
-              <li><a href="https://rauldipeas.surge.sh/blog" title="Blog"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/blogilo.svg" class="links-svg"></a></li>
+              <li><a href="./blog" title="Blog"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/blogilo.svg" class="links-svg"></a></li>
               <li><a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/twitter.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="https://youtube.com/rauldipeas" target="_blank" title="YouTube"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/youtube.svg" class="links-svg"></a></li>
