--- a/site/index.html
+++ b/site/index.html
@@ -26,7 +26,7 @@
           <a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><i class="fab fa-tumblr"></i></a>
           <a href="https://mastodon.social/@raul_dipeas" target="_blank" title="Mastodon"><i class="fab fa-mastodon"></i></a>
           <!--<a href="viber://chat?number=5511954421574" target="_blank" title="Viber"><i class="fab fa-viber"></i></a>-->
-          <!--<a href="https://t.me/rauldipeas" target="_blank" title="Telegram"><i class="fab fa-telegram-plane"></i></a>-->
+          <a href="https://t.me/rauldipeas" target="_blank" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
           <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
         </div>
       <div id="main">
@@ -43,7 +43,7 @@
             <ul>
               <li><a href="https://rauldipeas.github.io/respin-rdx" target="_blank" title="Respin RDX"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/ubuntu-tweak.svg" class="links-svg"></a></li>
               <li><a href="./blog" title="Blog"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/blogilo.svg" class="links-svg"></a></li>
-              <li><a href="https://rauldipeas.flarum.cloud" title="Fórum"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/system-help.svg" class="links-svg"></a></li>
+              <!--<li><a href="https://rauldipeas.flarum.cloud" title="Fórum"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/system-help.svg" class="links-svg"></a></li>-->
               <li><a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/twitter.svg" class="links-svg"></a></li>
               <li><a href="https://instagram.com/raul.dipeas" target="_blank" title="Instagram"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg blob"></a></li>
               <li><a href="https://youtube.com/rauldipeas" target="_blank" title="YouTube"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/youtube.svg" class="links-svg"></a></li>
