--- a/site/index.html
+++ b/site/index.html
@@ -27,6 +27,7 @@
           <a href="https://mastodon.social/@raul_dipeas" target="_blank" title="Mastodon"><i class="fab fa-mastodon"></i></a>
           <!--<a href="viber://chat?number=5511954421574" target="_blank" title="Viber"><i class="fab fa-viber"></i></a>-->
           <a href="https://t.me/rauldipeas" target="_blank" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
+          <a href="https://matrix.to/#/@raul_dipeas:matrix.org" target="_blank" title="Matrix"><i class="fas fa-user-shield"></i></a>
           <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
         </div>
       <div id="main">
