^respin-rdx -keybase ^background

--- a/site/index.html
+++ b/site/index.html
@@ -17,12 +17,12 @@
   <body class="is-preload" style="background: #000">
     <div id="wrapper">
       <div style="z-index: -99;">
-        <img src="assets/images/backgrounds/street-1.gif" class="animated-background">
+        <img src="assets/images/backgrounds/mario.gif" class="animated-background">
       </div>
         <div class="topnav">
           <a href="https://github.com/rauldipeas" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
           <a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><i class="fab fa-tumblr"></i></a>
-          <a href="https://mastodon.social/@raul_dipeas" target="_blank" title="Mastodon"><i class="fab fa-mastodon"></i></a>
+          <!--<a href="https://mastodon.social/@raul_dipeas" target="_blank" title="Mastodon"><i class="fab fa-mastodon"></i></a>-->
           <a href="https://t.me/rauldipeas" target="_blank" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
           <!--<a href="https://app.element.io/#/user/@raul_dipeas:matrix.org" target="_blank" title="Matrix"><i class="fas fa-user-shield"></i></a>-->
           <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
