--- a/site/index.html
+++ b/site/index.html
@@ -46,7 +46,7 @@
               <li><a href="https://youtube.com/rauldipeas" target="_blank" title="YouTube"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/youtube.svg" class="links-svg"></a></li>
               <li><a href="https://open.spotify.com/artist/29UanR5qAOzZA2ktvGCzpl" target="_blank" title="Spotify (Alvenaria)"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/spotify-client.svg" class="links-svg"></a></li>
               <li><a href="https://app.element.io/#/user/@raul_dipeas:matrix.org" target="_blank" title="Element (Matrix)"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/element-desktop.svg" class="links-svg"></a></li>
-              <li><a href="https://studio.sessionwire.io/studio/rauldipeas" target="_blank" title="Sessionwire"><img src="https://www.iconarchive.com/download/i106092/papirus-team/papirus-apps/ocenaudio.svg" class="links-svg"></a></li>
+              <li><a href="https://studio.sessionwire.io/studio/rauldipeas" target="_blank" title="Sessionwire"><img src="https://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/ocenaudio-icon.png" class="links-svg"></a></li>
             </ul>
           </nav>
         </header>
